assets/css/style.css
/* ... */
/* Header */
.header {
  width: 100%;
  background-color: var(--clr-neutral--900);
  position: fixed;
  /* needed unfix the position, as it was covering contact form - Joanna */
}

.navbar {
  width: 100%;
  max-width: 120rem;
  margin: 0 auto;
  padding: 2em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* positions added for absolute position of navbar__components - Sejung */
  position: relative;
}

/* Navbar toggler hidden for big screens - Sejung */

.navbar__toggler {
  display: none;
}

.navbar__components {
  display: flex;
  align-items: center;
}

.navbar__item {
  font-size: 1.8rem;
  color: var(--clr-primary--100);
}

.navbar__item a {
  font-weight: 900;
  color: var(--clr-primary--100);
}

.navbar__item:hover {
  color: var(--clr-neutral--900);
  text-decoration: underline;
}

.navbar__item a:hover {
  color: var(--clr-primary--100);
  text-decoration: underline;
}

.navbar__item:not(:first-child) {
  margin-left: 2em;
}

/* Main */
.main {
  width: 100%;
  /* max-width: 120rem; */
  margin: 0 auto;
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 8rem;
}

.main__content {
  width: 100%;
  max-width: 120rem;
  margin: 0 auto;
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Index.html Content */
.hero {
  width: 100%;
  display: flex;
  height: calc(100vh - 8rem);
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  background-color: rgb(31, 31, 31);
  background-image: linear-gradient(14deg,
      rgba(236, 230, 236, 0.377) 0%,
      rgba(247, 229, 238, 0.356) 6%,
      rgba(248, 158, 213, 0.5) 100%),
    url('../images/hero.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: left;
  padding: 0 2em;
}

.hero__content {
  background-color: #292929d8;
  color: var(--clr-neutral--100);
  padding: 3em;
  font-size: 1.7rem;
  border-radius: 0.5em;
  max-width: 45rem;
  text-align: center;
  margin-top: 20vh;
  position: absolute;
  left: 17%;
  top: 6%;
}



.hero__link,
.contact__link {
  padding-top: 2em;
}


.hero__link--btn,
.hero__main--btn,
.contact__link--btn,
.result__content--btn,
.results__reset {
  padding: 0.5em 2em;
  border-radius: 0.4em;
  background-color: var(--clr-primary--300);
  font-size: 1.4rem;
  font-weight: 400;
  color: var(--clr-neutral--900);
  transition: background-color .15s ease-in-out, color .15s ease-in-out;
}

.hero__link--btn,
.contact__link--btn {
  background-color: #35c0b7;
  color: var(--clr-neutral--100);
}

.hero__link--btn {
  margin-right: 0.5em
}

.hero__main--btn {
  /* background-color: #f5d4d6; */
  background-color: #30a59d;
  margin-left: 0.5em;
  color: white;
}

.hero__link--btn,
.hero__main--btn {
  width: 15rem;
  font-size: 1.5rem;
  letter-spacing: 0.05rem;
}

.result__content--btn:hover,
.results__reset:hover {
  background-color: var(--clr-primary--200);
  color: var(--clr-neutral--900);
}

.hero__link--btn:hover,
.hero__main--btn:hover,
.contact__link--btn:hover {
  background-color: #74ece4;
  color: var(--clr-neutral--900);
}

.bg {
  background-image: url('../images/bg2.svg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.description,
.incentive,
.range {
  display: flex;
  flex-direction: column;
}

.description {
  padding-top: 3em;
}


.description__container,
.incentive__container,
.range__container {
  max-width: 120rem;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.description__container {
  padding-top: 5em;
}

.description__content {
  width: 50%;
  text-align: center;
  background-color: #5cbab4a6;
  border-radius: 0.5em;
  color: rgb(47, 47, 47);
  padding: 2em;
}

.description__content--title,
.incentive__content--title,
.range__content--title,
.contact__content--title {
  font-size: 2.5rem;
  line-height: 3.5rem;
  margin-bottom: 0.6em;
  font-weight: 700;
}

.description__content--text,
.incentive__content--text,
.range__content--text,
.contact__content--text {
  font-size: 1.7rem;
  margin-bottom: 0.6em;
}

.description__content--accent {
  font-style: italic;
  margin-left: 2em;
  font-size: 1.7rem;
  line-height: 1.5rem;
  margin-bottom: 0.3em;
  color: var(--clr-primary--900);
}

.description__content--last {
  margin-bottom: 0.9em;
}

.description__image,
.incentive__image,
.range__image {
  width: 50%;
}

.range__image {
  width: 45%;
}



/* Incentive */
.incentive__content,
.range__content {
  width: 50%;
  background-color: #5cbab4a6;
  border-radius: 0.5em;
  color: rgb(47, 47, 47);
  padding: 2em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.incentive__content--text,
.range__content--text {
  width: 80%;
  text-align: center;
}

.contact {
  width: 100%;
  background-color: #474747;
}

.contact__container {
  width: 100%;
  max-width: 120rem;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 4em 2em 6em 2em;
}

.contact__content {
  width: 50%;
  text-align: center;
  color: var(--clr-neutral--100);
}


/* Please do not change the code above
Juliia*/

/* ----- Quiz ----- */

#quiz-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 2rem;
}

#quiz-header {
  background-color: #464646;
  border-radius: 0.4em;
  width: 100%;
  margin-top: 1rem;
  margin-bottom: 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0.5rem 1rem;
}

#quiz-title {
  color: white;
  padding: 0.5em;
  font-size: 3rem;
  letter-spacing: 0.05rem;
  text-align: center;
  align-self: center;
  justify-self: center;
  font-weight: 900;
}
/* ... */

